# VK-bot

./: .env_example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
app/: config.py  handlers.py  keyboards.py  main.py  text.py  utils.py
app/database/: db.py  models.py  orm.py
app/logs/: baselog.py
