[tool.poetry]
name = "VkBot"
version = "1.0.0"
description = "A bot for vkontakte with different functions."
authors = ["VoblaSuperFish author@mail"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
vk-api = "11.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
