[tool.poetry]
name = "VkBot"
version = "1.0.0"
description = "A bot for vkontakte with different functions."
authors = ["VoblaSuperFish author@mail"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12"
vk-api = "11.9.9"
pydantic-settings = "2.3.4"
sqlalchemy = "2.0.31"
wikipedia = "1.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
